Hibernate pagination added

--- a/HibernateCRUD/src/main/webapp/home.html
+++ b/HibernateCRUD/src/main/webapp/home.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" th:href="@{css/all.css}" />
 </head>
 <body>
-<a th:href="@{all-users}"><span>All Users</span></a><br/>
+<a th:href="@{all-users/1}"><span>All Users</span></a><br/>
 	<form action="save" method="post">
 
 		<div class="form-group">
