HomeController is changed

--- a/HibernateCRUD/src/main/webapp/home.html
+++ b/HibernateCRUD/src/main/webapp/home.html
@@ -5,8 +5,10 @@
 <title>Register</title>
 <link rel="stylesheet" th:href="@{css/bootstrap.css}" />
 <link rel="stylesheet" th:href="@{css/all.css}" />
+<link rel="stylesheet" th:href="@{css/index.css}" />
 </head>
 <body>
+<h1 class="heading">Register </h1>
 <a th:href="@{all-users/1}"><span>All Users</span></a><br/>
 	<form action="save" method="post">
 
